// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFieldBase does not render the add button when repeatable is true and the maximum limit of repetions is reached 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <div
      class="lfr-ddm-form-field-repeatable-toolbar"
    >
      <button
        aria-label="add-duplicate-field"
        class="ddm-form-field-repeatable-add-button p-0 hide btn btn-sm btn-primary"
        title="duplicate"
        type="button"
      >
        <svg
          class="lexicon-icon lexicon-icon-plus"
          role="presentation"
        >
          <use
            href="#plus"
          />
        </svg>
      </button>
    </div>
    <label
      aria-labelledby="id_fieldDetails"
      class="ddm-empty ddm-repeatable"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="id_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
    <span
      class="sr-only"
      id="id_fieldDetails"
    >
      Text
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase does not render the label if showLabel is false 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
  >
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Text
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with contentRenderer 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <div>
      <h1>
        Foo bar
      </h1>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with help text 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
  >
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
      <div>
        Type something!
      </div>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Type something!
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with id 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="Id_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with label 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldDetails"
      class="ddm-label"
    >
      Text
    </label>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Text
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with required 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldDetails"
      class="ddm-label"
    >
      <span
        class="ddm-label-required reference-mark"
      >
        <svg
          class="lexicon-icon lexicon-icon-asterisk"
          role="presentation"
        >
          <use
            href="#asterisk"
          />
        </svg>
      </span>
    </label>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      required
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the add button when repeatable is true 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldLabel"
    class="form-group hide"
    role="group"
  >
    <div
      class="lfr-ddm-form-field-repeatable-toolbar"
    >
      <button
        aria-label="add-duplicate-field"
        class="ddm-form-field-repeatable-add-button p-0 btn btn-sm btn-primary"
        title="duplicate"
        type="button"
      >
        <svg
          class="lexicon-icon lexicon-icon-plus"
          role="presentation"
        >
          <use
            href="#plus"
          />
        </svg>
      </button>
    </div>
    <label
      aria-labelledby="undefined_fieldDetails"
      class="ddm-empty ddm-repeatable"
      id="undefined_fieldLabel"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Text
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the default markup 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;
